# hailo-simple-samples

./: .clang-format  .gitattributes  CMakeLists.txt  README.md
src/direct/: main.cpp  save-first-frame.py
src/gstream/: main.cpp  postprocess.cpp  postprocess.h
